SRSS.IAM/SRSS.IAM.API/manifest/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: srss-iam-db
  namespace: amayakuro
spec:
  serviceName: "srss-iam-db"
  selector:
    matchLabels:
      srss: iam-db
  replicas: 1
  template:
    metadata:
      labels:
        srss: iam-db
    spec:
      containers:
        - name: postgres # container name within the pod.
          image: pgvector/pgvector:pg18-trixie
          resources:
            limits:
              memory: "2Gi"
              cpu: "2"
          ports:
            - containerPort: 5432
              name: tcppostgres
      topologySpreadConstraints:
        - maxSkew: 2
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              topology.kubernetes.io/zone: sgmy

      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              preference:
                matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - sgmy
            - weight: 10
              preference:
                matchExpressions:
                  - key: k8s.badaimweeb.me/zone-tier1
                    operator: In
                    values:
                      - asia-se
