SRSS.IAM/SRSS.IAM.API/manifest/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srss-iam-db-service
  namespace: amayakuro

spec:
  type: ClusterIP
  selector:
    srss: iam-db
  ports:
    - port: 5432
      targetPort: 5432
      name: srss-iam-postgres
