SRSS.IAM/SRSS.IAM.API/manifest/grobid-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: srss-grobid-service
  namespace: amayakuro

spec:
  type: ClusterIP
  selector:
    srss: grobid
  ports:
    - port: 8070 
      targetPort: 8070
      name: srss-grobid
